--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ social:
   instagram: nullmiso_ # Add your Instagram handle
   keybase: # Add your Keybase handle
   medium: # Add your Medium handle
-  spotify: nullmiso # Add your Spotify handle
+  spotify: kpcgwargh8ki5v6s0zt5kn9ha # Add your Spotify handle
   stackoverflow: # Add your Stack Overflow ID number
   steam: # Add your Steam handle
 
