--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Mandatory settings
 
 blog_theme: light # Or use dark
-name: Chalk
+name: nullmiso
 paginate: 25
-url: http://chalk.nielsenramon.com
+url: https://nullmiso.github.io
 
 
 # Optional settings
