--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
   flickr: # Add your Flickr handle
   github: nullmiso # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
-  twitter: nullmiso_ # Add your Twitter handle
+  twitter: andrewyu6581 # Add your Twitter handle
   email: nullmiso@gmail.com # Add your Email address
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
@@ -33,7 +33,7 @@ social:
   tumblr: # Add your Tumblr handle
   bitbucket: # Add your Bitbucket handle
   docker: # Add your Docker Hub handle
-  instagram: nullmiso_ # Add your Instagram handle
+  instagram: andrewyu6581 # Add your Instagram handle
   keybase: # Add your Keybase handle
   medium: # Add your Medium handle
   spotify: kpcgwargh8ki5v6s0zt5kn9ha # Add your Spotify handle
