--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ ga_analytics: UA-28631876-6 # Add your GA Tracking Id
 local_fonts: true # Change to true if you wish to use local fonts
 rss_enabled: false # Change to false if not
 scrollappear_enabled: true # Change to false to disable
-tag_nav_enabled: false # Change to true if you wish to show an additional 'tag-list' navigation below the header
+tag_nav_enabled: true # Change to true if you wish to show an additional 'tag-list' navigation below the header
 theme_toggle: false # Change to true if you wish to show an icon in the navigation for dynamic theme toggling
 social:
   dribbble: # Add your Dribbble handle
