--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
   flickr: # Add your Flickr handle
   github: nullmiso # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
-  twitter: andrewyu6581 # Add your Twitter handle
+  twitter: # Add your Twitter handle
   email: nullmiso@gmail.com # Add your Email address
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
@@ -30,10 +30,10 @@ social:
   youtube: # Add your Youtube handle
   twitch: # Add your Twitch handle
   discord: # Add you Discord server invitation ID
-  tumblr: # Add your Tumblr handle
+  tumblr: misoreviews # Add your Tumblr handle
   bitbucket: # Add your Bitbucket handle
   docker: # Add your Docker Hub handle
-  instagram: andrewyu6581 # Add your Instagram handle
+  instagram: # Add your Instagram handle
   keybase: # Add your Keybase handle
   medium: # Add your Medium handle
   spotify: kpcgwargh8ki5v6s0zt5kn9ha # Add your Spotify handle
